--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -231,6 +231,9 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation project(':react-native-call-log')
+    
 }
 
 // Run this once to be able to run the application with BUCK
